--- a/aboutme.html
+++ b/aboutme.html
@@ -1,1 +1,16 @@
+<!doctype html>
+<html>
+  <head>
+    <style type = "text/css">
+      body{background-color: #C92EF7}
+        h1{font-family: arial; color: white; text-align: center;}
+        div{font-family: arial; text-align: center; color: white}
+    </style>
+   </head>
 
+  <body>
+<h1>Girls Who Code: Summer Immersion Program</h1>
+<div>As Told By Hannah Johnston</div>
+
+  </body>
+</html>
