--- a/aboutme.html
+++ b/aboutme.html
@@ -4,7 +4,7 @@
     <style type = "text/css">
       body{background-color: #C92EF7}
         h1{font-family: arial; color: white; text-align: center;}
-        p{font-family: arial; color: white; font-size: 16; text-align: left;}
+        p{font-family: arial; color: white; text-align: left;}
         div{font-family: arial; text-align: center; color: white}
     </style>
    </head>
