--- a/aboutme.html
+++ b/aboutme.html
@@ -4,14 +4,13 @@
     <style type = "text/css">
       body{background-color: #C92EF7}
         h1{font-family: arial; color: white; text-align: center;}
-        p{font-family: arial; color: white; text-align: left;margin-top: 100px; margin-bottom: 100px; margin-right: 150px;margin-left: 80px}
+        p{font-family: arial; color: white; text-align: left; margin-top: 20px; margin-bottom: 100px; margin-right: 150px;margin-left: 80px}
         div{font-family: arial; text-align: center; color: white}
     </style>
    </head>
   <body>
 <h1>Girls Who Code: Summer Immersion Program</h1>
 <div>As Told By Hannah Johnston</div>
-<p>Scratch: Working with scratch was extremely frustrating yet a necessary first step in understanding computer science. Instead of typing code, Scratch 
-    
+<p>Scratch: Working with Scratch was extremely frustrating yet a necessary first step in understanding computer science. Instead of typing code, Scratch has pre-built blocks, easy to stack together to make things happen like a code would. This really allowed for the coding process to be visual and simplified, therefore building the basic understanding of the concpet of coding.</p> 
   </body>
 </html>
